# space-invaders

./: Cargo.toml  README.MD  data.json  index.html  intro.json  outro.json  post_build.py  space_invaders.wasm  test.json
html/: index.html  program.wasm  space_invaders.wasm
src/: game.rs  input.rs  leaderboard.rs  lib.rs  render.rs  state.rs  stubs.rs
src/core/: collision.rs  log.rs  point.rs  size.rs  vector.rs
src/entities/: bullet.rs  enemy.rs  particle.rs  player.rs  shield.rs  swarm.rs  ufo.rs  world.rs
