[package]
name = "space-invaders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.0"
itertools-num = "0.1.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = true
strip = false
lto = true